src/test/ui/issue-17954.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/issue-17954.rs:17:14
   |
LL |     let a = &FOO;
   |              ^^^ temporary value does not live long enough
...
LL | }
   | - temporary value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
